@@ -38,7 +38,7 @@ import org.eclipse.scout.rt.platform.Order;
 import org.eclipse.scout.rt.platform.classid.ClassId;
 import org.eclipse.scout.rt.platform.resource.BinaryResource;
 import org.eclipse.scout.rt.platform.text.TEXTS;
-import org.eclipse.scout.rt.platform.util.IOUtility;
+import org.eclipse.scout.rt.platform.util.FileUtility;
 import org.eclipse.scout.rt.platform.util.NumberUtility;
 import org.eclipse.scout.rt.platform.util.ObjectUtility;
 import org.eclipse.scout.rt.shared.services.lookup.ILookupCall;
@@ -264,7 +264,7 @@ public class SplitBoxForm extends AbstractForm implements IPageForm {
                 if (resource == null) {
                   return false;
                 }
-                String ext = IOUtility.getFileExtension(resource.getFilename()).toLowerCase();
+                String ext = FileUtility.getFileExtension(resource.getFilename()).toLowerCase();
                 return ObjectUtility.isOneOf(ext, "jpg", "jpeg", "png");
               }
 
